# super-trader-mcp-server

./: AGENTS.md  LICENSE  README.md  pyproject.toml  update_deps.sh
bruno/super-trader-mcp-server/: ack init.yml  get_current_time.yml  get_stock_price.yml  get_top_holdings.yml  init.yml  list tools.yml  opencollection.yml  resoource- historical prices.yml
bruno/super-trader-mcp-server/environments/: local.yml
docs/: llama_cpp_integration.md
examples/: date_time_client.py
src/super_trader_mcp_server/: main.py  mcpserver.py  models.py
src/super_trader_mcp_server/prompts/: __init__.py  trading.py  utils.py
src/super_trader_mcp_server/resources/: __init__.py  trading.py
src/super_trader_mcp_server/tools/: __init__.py  math.py  trading.py  utils.py
